fix(Storybook): fixes typos and adds back removed code in docs

--- a/packages/@lightningjs/ui-components/src/components/Badge/Badge.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Badge/Badge.mdx
@@ -51,6 +51,8 @@ class Example extends lng.Component {
 }
 ```
 
+Or an icon:
+
 ```js
 import { Badge } from '@lightningjs/ui-components';
 
@@ -67,6 +69,8 @@ class Example extends lng.Component {
   }
 }
 ```
+
+A title and an icon can also be used together:
 
 ```js
 import { Badge } from '@lightningjs/ui-components';
