--- a/packages/@lightningjs/ui-components/src/components/Button/Button.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Button/Button.mdx
@@ -24,6 +24,8 @@ import * as ButtonStories from './Button.stories.js';
 
 # Button
 
+Basic component that handles styling and functionality for a button.
+
 ## Source
 
 https://github.com/rdkcentral/Lightning-UI-Components/blob/develop/packages/@lightningjs/ui-components/src/components/Button/Button.js
