--- a/packages/@lightningjs/ui-components/src/docs/LightningResources.mdx
+++ b/packages/@lightningjs/ui-components/src/docs/LightningResources.mdx
@@ -21,11 +21,11 @@ import { Meta } from '@storybook/blocks';
 
 <Meta title="Docs/Lightning Resources" />
 
-## Additional Resources
+# Additional Resources
 
 This page provides additional resources that can help users learn more about Lightning-UI.
 
-### Lightning Documentation
+## Lightning Documentation
 
 - https://lightningjs.io/docs/#/what-is-lightning/index
 
@@ -33,7 +33,7 @@ This page provides additional resources that can help users learn more about Lig
 
 - https://rdkcentral.github.io/Lightning-SDK/
 
-### Lightning UI Components
+## Lightning UI Components
 
-- ##### Open Source Repo
+- #### Open Source Repo
   - https://github.com/rdkcentral/Lightning-UI-Components
