--- a/packages/@lightningjs/ui-components/src/docs/Storybook.mdx
+++ b/packages/@lightningjs/ui-components/src/docs/Storybook.mdx
@@ -21,7 +21,7 @@ import { Meta } from '@storybook/blocks';
 
 <Meta title="Docs/Storybook Structure" />
 
-## LUI Storybook Code Organization
+# LUI Storybook Code Organization
 
 `apps/lightning-ui-docs/.storybook`
 
