fix(Toggle): alias strokeWeight with strokeWidth

--- a/packages/@lightningjs/ui-components/src/components/Toggle/Toggle.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Toggle/Toggle.mdx
@@ -92,7 +92,7 @@ this.tag('Toggle').onEnter = toggle => {
 | knobColorChecked       | string        | color of knob when checked                                                                                                                                                |
 | strokeColor            | string        | color of stroke                                                                                                                                                           |
 | strokeRadius           | number\|array | set radius of Toggle, which, if not defined, will be calculated based on the radius of the knob and padding (if no radius is desired, it needs to explicitly be set to 0) |
-| strokeWeight           | number        | thickness of stroke                                                                                                                                                       |
+| strokeWidth            | number        | thickness of stroke                                                                                                                                                       |
 
 ### Methods
 
