fix: update Checkbox, Radio, and Toggle style mappings (#408)
* fix(Toggle): update default style mappings

* fix(Radio): update default token mappings

* fix(Checkbox): update default token mappings and alias check style properties to say icon

* fix: update Checkbox and Radio size so outermost size reflects the correct style size, then work inwards

* fix(Toggle): deprecate knobX and knobXChecked and update default style mappings

* fix(Toggle): alias strokeWeight with strokeWidth

* tests: update snapshots

--- a/packages/@lightningjs/ui-components/src/components/Toggle/Toggle.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Toggle/Toggle.mdx
@@ -80,21 +80,19 @@ this.tag('Toggle').onEnter = toggle => {
 
 ### Style Properties
 
-| name                   | type          | description                        |
-| ---------------------- | ------------- | ---------------------------------- |
-| backgroundColor        | string        | color of background when unchecked |
-| backgroundColorChecked | string        | color of background when checked   |
-| knobHeight             | number        | height of Toggle knob              |
-| knobPadding            | number        | padding to apply around knob       |
-| knobRadius             | number        | radius of Toggle knob              |
-| knobWidth              | number        | width of Toggle knob               |
-| knobX                  | number        | X position of knob when unchecked  |
-| knobXChecked           | number        | X position of knob when checked    |
-| knobColor              | string        | color of knob when unchecked       |
-| knobColorChecked       | string        | color of knob when checked         |
-| strokeColor            | string        | color of stroke                    |
-| strokeRadius           | number\|array | radius of Toggle                   |
-| strokeWeight           | number        | thickness of stroke                |
+| name                   | type          | description                                                                                                                                                               |
+| ---------------------- | ------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| backgroundColor        | string        | color of background when unchecked                                                                                                                                        |
+| backgroundColorChecked | string        | color of background when checked                                                                                                                                          |
+| knobHeight             | number        | height of Toggle knob                                                                                                                                                     |
+| knobPadding            | number        | padding to apply around knob                                                                                                                                              |
+| knobRadius             | number        | radius of Toggle knob                                                                                                                                                     |
+| knobWidth              | number        | width of Toggle knob                                                                                                                                                      |
+| knobColor              | string        | color of knob when unchecked                                                                                                                                              |
+| knobColorChecked       | string        | color of knob when checked                                                                                                                                                |
+| strokeColor            | string        | color of stroke                                                                                                                                                           |
+| strokeRadius           | number\|array | set radius of Toggle, which, if not defined, will be calculated based on the radius of the knob and padding (if no radius is desired, it needs to explicitly be set to 0) |
+| strokeWidth            | number        | thickness of stroke                                                                                                                                                       |
 
 ### Methods
 
