docs(Marquee): added resetMarquee and toggleMarquee descriptions to MetadataBase and TextBox

--- a/packages/@lightningjs/ui-components/src/components/MetadataBase/MetadataBase.mdx
+++ b/packages/@lightningjs/ui-components/src/components/MetadataBase/MetadataBase.mdx
@@ -96,3 +96,9 @@ class Example extends lng.Component {
 | logoPadding          | number           | spacing between logo and secondLine                             |
 | logoWidth            | number           | width for logo                                                  |
 | titleTextStyle       | string \| object | text style for title                                            |
+
+### Methods
+
+#### resetMarquee(): void
+
+This will call [TextBox](?path=/docs/components-textbox--docs)'s `toggleMarquee` method in order to restart or stop marquee scrolling if the marquee flag has changed.
