--- a/packages/@lightningjs/ui-components/src/components/TextBox/TextBox.mdx
+++ b/packages/@lightningjs/ui-components/src/components/TextBox/TextBox.mdx
@@ -76,3 +76,9 @@ TextBox also supports rendering as an InlineContent component. See [InlineConten
 | offsetX   | number           | Used to ensure text is positioned correctly                                                                                                                                                                                                             |
 | offsetY   | number           | Used to ensure text is positioned correctly                                                                                                                                                                                                             |
 | textStyle | string \| object | Default style of text to be displayed. Object should come from the current theme or contain any properties that the [Lightning text texture supports](https://lightningjs.io/docs/#/lightning-core-reference/RenderEngine/Textures/Text?id=properties). |
+
+### Methods
+
+#### toggleMarquee(): void
+
+This will restart or stop marquee scrolling to match the marquee flag in case it has changed.
