--- a/packages/@lightningjs/ui-components/src/components/ListItem/ListItem.mdx
+++ b/packages/@lightningjs/ui-components/src/components/ListItem/ListItem.mdx
@@ -17,21 +17,17 @@ limitations under the License.
 SPDX-License-Identifier: Apache-2.0
 \*/}
 
-import {
-  Meta,
-  Title,
-  ArgTypes,
-  Description,
-  Subtitle
-} from '@storybook/blocks';
+import { Meta, Title, ArgTypes, Description } from '@storybook/blocks';
 import * as ListItemStories from './ListItem.stories';
 import * as ButtonStories from '../Button/Button.stories';
 
-<Meta title="Components/ListItem" />
+<Meta of={ListItemStories} />
 
-# ListItem
+<Title />
 
-Component to represent a single item within a list.
+<Description of={ListItemStories} />
+
+<Description of={ListItemStories.ListItem} />
 
 ## Source
 
@@ -65,12 +61,10 @@ class Basic extends lng.Component {
 
 `ListItem` has the same properties as the ones listed in [Button](?path=/docs/components-button--basic) in addition to a couple listed below:
 
-| name           | type    | default   | description                                                                           |
-| -------------- | ------- | --------- | ------------------------------------------------------------------------------------- |
-| description    | string  | undefined | description text                                                                      |
-| prefixLogo     | string  | undefined | Logo to be placed to the left of the title and description                            |
-| shouldCollapse | boolean | false     | flag that if `true`, hides the title when `ListItem` is in unfocused or disabled mode |
-| suffixLogo     | string  | undefined | Logo to be placed to the right of the title and description                           |
+<ArgTypes
+  of={ListItemStories.ListItem}
+  exclude={['suffix', 'prefix', 'title', 'mode']}
+/>
 
 ### Style Properties
 
@@ -87,4 +81,4 @@ class Basic extends lng.Component {
 
 List item extends button
 
-<ArgTypes of={ButtonStories} />
+<ArgTypes of={ButtonStories} exclude={['mode']} />
