fix(Base): add slashes for curly braces in docs

--- a/packages/@lightningjs/ui-components/src/docs/Base.mdx
+++ b/packages/@lightningjs/ui-components/src/docs/Base.mdx
@@ -80,7 +80,7 @@ Any component which extends the Base component and uses the `withThemeStyles` mi
 This method accepts a target component, patch object, and optional smooth object. If the component is visible, it will smooth in the smooth object, or fall back to
 the patch object, if not it will apply the patch.
 
-#### isFullyOnScreen({ offsetX: number, offsetY: number }): bool
+#### isFullyOnScreen(\{ offsetX: number, offsetY: number \}): bool
 
 Returns a boolean for whether or not the entirety of the component is rendered within the bounds of the screen size.
 
