chore:update tile docs to include latest aliastyles

--- a/packages/@lightningjs/ui-components/src/components/Tile/Tile.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Tile/Tile.mdx
@@ -94,6 +94,7 @@ class Basic extends lng.Component {
 | artwork            | object  | false    | undefined  | Object containing all properties supported in the [Artwork component](?path=/docs/components-artwork--artwork)                                                                                                                          |
 | badge              | object  | false    | undefined  | Object containing all properties supported in the [Badge component](?path=/docs/components-badge--text)                                                                                                                                 |
 | checkbox           | object  | false    | undefined  | Object containing all properties supported in the [Checkbox component](?path=/docs/components-checkbox--checkbox)                                                                                                                       |
+| circle             | boolean | false    | undefined  | If true, changes format of itemLayout to circle                                                                                                                                                                                         |
 | label              | object  | false    | undefined  | Object containing all properties supported in the [Label component](?path=/docs/components-label--label)                                                                                                                                |
 | logo               | string  | false    | undefined  | Source of logo                                                                                                                                                                                                                          |
 | metadata           | object  | false    | undefined  | Object containing all properties supported in the [MetadataTile component](?path=/docs/components-metadatatile--metadata-tile)<br /> Can use a different Metadata component by passing in a 'type' and then that component's properties |
@@ -107,8 +108,8 @@ class Basic extends lng.Component {
 | ---------------------- | --------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | animationEntrance      | object                | Animation values applied on entrance                                                                                                                                                                                  |
 | animationExit          | object                | Animation values applied on exit                                                                                                                                                                                      |
-| iconHeight             | number                | customized height of icon                                                                                                                                                                                             |
-| iconWidth              | number                | customized width of icon                                                                                                                                                                                              |
+| logoHeight             | number                | customized height of icon                                                                                                                                                                                             |
+| logoWidth              | number                | customized width of icon                                                                                                                                                                                              |
 | metadataLocation       | 'standard' \| 'inset' | Determines the location of the metadata within the tile                                                                                                                                                               |
 | paddingX               | number                | Padding applied to the inside of the left and right of component                                                                                                                                                      |
 | paddingY               | number                | Padding applied to the inside of the top and bottom of component (when metadataLocation is inset, if there is no ProgressBar, this is applied to the space between the bottom of the Metadata and bottom of the Tile) |
