--- a/packages/@lightningjs/ui-components/src/components/Key/Key.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Key/Key.mdx
@@ -56,7 +56,6 @@ class Basic extends lng.Component {
 | ---------- | -------- | -------- | --------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | icon       | string   | false    | null      | url for icon                                                                                                                                                                                                          |
 | onEnter    | function | false    | undefined | if defined, will be invoked when enter is pressed while focused on the `Key` component. When defined, the `$onSoftKey` and `$toggleKeyboard` events will not be emitted from the key (see Events section below)       |
-| size       | string   | false    | sm        | Used to determine the with of the key. Accepts: `sm`, `md`, `lg`, `xl`, `xxl`.                                                                                                                                        |
 | toggle     | boolean  | false    | undefined | If true, pressing the key will trigger the $toggleKeyboard event. If false, the key will trigger the $onSoftKey event                                                                                                 |
 | keySpacing | number   | false    | 0         | The horizontal spacing between each key in a [Keyboard](?path=/docs/components-keyboard--docs). This value is factored intot he width of the key so that it aligns with with the borders of other keys in a Keyboard. |
 
@@ -69,6 +68,7 @@ class Basic extends lng.Component {
 | iconHeight | number           | height set to all icons                                                                        |
 | minWidth   | number           | used as a fallback width if no width is passed into the component and `fixed` is false         |
 | paddingX   | number           | space between the button horizontal edge and the content                                       |
+| sizes      | object           | used to determine the width of key, contains the properties `sm`, `md`, `lg`, `xl`             |
 | textStyle  | string \| object | text style to apply to the title                                                               |
 
 ### Events
