--- a/packages/@lightningjs/ui-components/src/components/NavigationManager/NavigationManager.mdx
+++ b/packages/@lightningjs/ui-components/src/components/NavigationManager/NavigationManager.mdx
@@ -86,6 +86,7 @@ const directionPropNames = {
 | lazyUpCountBuffer | number  | false    | 2         | If `lazyUpCount` is set, this is used to calculate the initial number of items to display on the first render (`lazyUpCount` + `lazyLoadUpCountBuffer`). The remaining items are stored as lazy items. Each time the user navigates further, the next lazy item will be added. |
 | neverScroll       | boolean | false    | false     | if true, the component will never scroll, unless alwaysScroll is set to true, and if false, the component will apply normal scrolling logic                                                                                                                                    |
 | scrollIndex       | number  | false    | 0         | Item index at which scrolling begins, provided the sum of item widths is greater than the width of the `Row`                                                                                                                                                                   |
+| waitForDimensions | boolean | false    | false     | if true, the `NavigationManager` will wait for all child elements' `w` and `h` to be set before displaying the `NavigationManager`                                                                                                                                             |
 
 ### Style Properties
 
