fix(CardContent): adds props to docs for CardContent

--- a/packages/@lightningjs/ui-components/src/components/ListItem/ListItem.mdx
+++ b/packages/@lightningjs/ui-components/src/components/ListItem/ListItem.mdx
@@ -55,7 +55,7 @@ class Basic extends lng.Component {
 
 ## API
 
-### Button Properties
+### Parent Component Properties
 
 `ListItem` extends `Button` therefore shares the same properties
 
