--- a/packages/@lightningjs/ui-components/src/components/CardContent/CardContent.mdx
+++ b/packages/@lightningjs/ui-components/src/components/CardContent/CardContent.mdx
@@ -17,13 +17,15 @@ limitations under the License.
 SPDX-License-Identifier: Apache-2.0
 \*/}
 
-import { Meta, Title } from '@storybook/blocks';
+import { Meta, Description, Title, ArgTypes } from '@storybook/blocks';
+import * as CardContentStories from './CardContent.stories.js';
+import * as CardStories from '../Card/Card.stories.js';
 
-<Meta title="Components/CardContent" />
+<Meta of={CardContentStories} />
 
-# CardContent
+<Title />
 
-Formats a Card with one part Tile and one part Metadata.
+<Description of={CardContentStories} />
 
 ## Source
 
@@ -49,16 +51,17 @@ class Basic extends lng.Component {
 
 ## API
 
+### Parent Componet Properties
+
+`CardContent` extends `Card` therefore shares same properties
+
+<ArgTypes of={CardStories.Card} exclude={['mode']} />
+
 ### Properties
 
-| name               | type                       | required | default      | description                                                                                                                          |
-| ------------------ | -------------------------- | -------- | ------------ | ------------------------------------------------------------------------------------------------------------------------------------ |
-| collapseToMetadata | boolean                    | false    | false        | when true, the collapsed state will hide the tile and show the metadata (when false, the metadata is hidden and the tile is visible) |
-| metadata           | object                     | true     | undefined    | object with all of the properties for [MetadataCardContent](?path=/story/elements-metadatacardcontent--basic)                        |
-| orientation        | ['horizontal', 'vertical'] | false    | 'horizontal' | orientation of card's layout                                                                                                         |
-| shouldCollapse     | boolean                    | false    | false        | will collapse the Card when the Card is not focused                                                                                  |
-| src                | string                     | false    | undefined    | path to artwork image (can also be set via `{ tile: { artwork: { src } } }`)                                                         |
-| tile               | object                     | false    | undefined    | Object containing all properties supported in the [Tile component](?path=/docs/components-tile--basic)                               |
+In addition the `Card` properties, `CardContent` has the following properties:
+
+<ArgTypes of={CardContentStories.CardContent} exclude={['mode']} />
 
 ### Style Properties
 
