--- a/packages/apps/lightning-ui-docs/src/Contributing.mdx
+++ b/packages/apps/lightning-ui-docs/src/Contributing.mdx
@@ -18,7 +18,6 @@ SPDX-License-Identifier: Apache-2.0
 \*/}
 
 import { Meta, Markdown } from '@storybook/blocks';
-import Contributing from '../../../../CONTRIBUTING.md?raw';
 
 <Meta title="Docs / Contributing" />
 
@@ -171,10 +170,10 @@ Before a new component will be reviewed, it must meet the following prerequisite
 If you are creating a new component, you can bootstrap the required file structure with:
 
 ```sh
-yarn createComponent <packageName> <componentName>
+yarn createComponent <packageName> <componentName> <parentName>
 ```
 
-- `packageName`: name of which package the component will be published to (`@lightningjs/ui-components` or `@lightningjs/ui-components`)
+- `packageName`: name of which package the component will be published to ( example `@lightningjs/ui-components`)
 - `componentName`: name of component to be added
 - `parentName`: name of parent component the new components extends
 
@@ -478,15 +477,18 @@ Usage documentation lives in `<Type>/<Component>/<Component>.mdx`. [MDX](https:/
 If you generated a new component with `yarn createComponent`, a template layout should exist for your component. If you are contributing to an existing component, follow the patterns established there. Adding usage steps should look like this example:
 
 ```js
-import { Canvas, Story } from '@storybook/addon-docs';
-import <Component> from '.';
+import { Meta, Title, ArgTypes, Description } from '@storybook/blocks';
+import * as ComponentNameStories from './ComponentNameStories.stories';
 
-// title, description, etc. (eg # <Component>)
+<Meta of={ComponentNameStories} />
+
+<Title /> /* this will be the H1 on the page */
+
+<Description /> /* taken from JS Doc in Story */
 
 ## Usage
 
 Implementation description here
-
 
 // example implementation
 import lng from '@lightningjs/core';
@@ -499,20 +501,12 @@ class Example extends lng.Component {
     };
   }
 }
-
-// Embed live example from Storybook
-<Canvas>
-  <Story id="mycomponent--basic" />
-</Canvas>
 ```
-
-The `<Canvas>` component will supply the source code for the `<Story>` inside, so only use code blocks when you want to illustrate something explicit without an example. The `id` value for `<Story>` can be derived from the URL path of the story you are trying to embed.
 
 In summary, documenting usage is as follows:
 
 - description of usage
-- [optional] implementation code block and/or
-- [optional] Storybook example
+- implementation code block (optional)
 
 Repeat this pattern for as many usage variations as you see fit.
 
@@ -524,24 +518,26 @@ API documentation lives in `<Type>/<Component>/<Component>.mdx`, below [usage do
 
 If you generated a new component with `yarn createComponent`, a template layout should exist for your component. If you are contributing to an existing component, follow the patterns established there. Adding API documentation should follow this pattern:
 
-```
+```mdx
 ## API
+
+### Parent Properties
+
+ComponentName has the same properties as [ParentComponentName](?path=/docs/components-parentName--docs)
+
+<ArgTypes of={ParentNameStories.parentName} exclude={['mode']} />
 
 ### Properties
 
-name|type|required|default|description
--|-|-|-
--|-|-|-
+<ArgTypes of={ComponentNameStories.Basic} exclude={['mode']} />
 
 ### Methods
 
 #### methodName(argument:type): returnValue | void
 
-description
+### Style Properties
 
-##### Arguments
-
-name|type|required|default|description
--|-|-|-|-
--|-|-|-|-
+| name | type | required | default | description |
+| ---- | ---- | -------- | ------- | ----------- |
+| -    | -    | -        | -       | -           |
 ```
