fix(Storybook): removes Markdown from imports

--- a/packages/apps/lightning-ui-docs/src/Contributing.mdx
+++ b/packages/apps/lightning-ui-docs/src/Contributing.mdx
@@ -17,7 +17,7 @@ limitations under the License.
 SPDX-License-Identifier: Apache-2.0
 \*/}
 
-import { Meta, Markdown } from '@storybook/blocks';
+import { Meta } from '@storybook/blocks';
 
 <Meta title="Docs / Contributing" />
 
