--- a/packages/@lightningjs/ui-components/src/components/MetadataCardContent/MetadataCardContent.mdx
+++ b/packages/@lightningjs/ui-components/src/components/MetadataCardContent/MetadataCardContent.mdx
@@ -59,12 +59,13 @@ class Basic extends lng.Component {
 
 ### Properties
 
-| name        | type                                                  | required | default   | description                                                                               |
-| ----------- | ----------------------------------------------------- | -------- | --------- | ----------------------------------------------------------------------------------------- |
-| title       | string                                                | false    | undefined | title text                                                                                |
-| description | string                                                | false    | undefined | description text directly below title                                                     |
-| details     | string                                                | false    | undefined | details text at bottom left of component                                                  |
-| provider    | [Provider](?path=/docs/components-provider--provider) | false    | undefined | an object of [Provider](?path=/docs/components-provider--provider) properties to patch in |
+| name               | type                                           | required | default   | description                                                                               |
+| -----------        | ---------------------------------------------- | -------- | --------- | ----------------------------------------------------------------------------------------- |
+| title              | string                                         | false    | undefined | title text                                                                                |
+| description        | string                                         | false    | undefined | description text directly below title                                                     |
+| descriptionDetails | string                                         | false    | undefined | details text directly below description                                                   |
+| details            | string                                         | false    | undefined | details text at bottom left of component                                                  |
+| provider           | [Provider](?path=/docs/components-provider--provider) | false    | undefined | an object of [Provider](?path=/docs/components-provider--provider) properties to patch in |
 
 ### Style Properties
 
