docs: fix typo in Button and Key docs

--- a/packages/@lightningjs/ui-components/src/components/Button/Button.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Button/Button.mdx
@@ -65,7 +65,7 @@ If you'd like to have a fixed button with a width smaller than the `minWidth`, y
 
 | name    | type            | readonly | default   | description                                                 |
 | ------- | --------------- | -------- | --------- | ----------------------------------------------------------- |
-| fixed   | boolean         | false    | false     | when true, `w` overrides dynamically calclulated width      |
+| fixed   | boolean         | false    | false     | when true, `w` overrides dynamically calculated width       |
 | justify | string          | false    | 'center'  | alignment of the button's content                           |
 | prefix  | object \| array | -        | undefined | Lightning components to be placed to the left of the title  |
 | suffix  | object \| array | -        | undefined | Lightning components to be placed to the right of the title |
