--- a/packages/@lightningjs/ui-components/src/components/Key/Key.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Key/Key.mdx
@@ -62,7 +62,7 @@ For fixed sizing, set the `fixed` property to `true` and define the `w` property
 
 | name       | type     | required | default   | description                                                                                                                                                                                                           |
 | ---------- | -------- | -------- | --------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| fixed      | boolean  | false    | false     | when true, `w` overrides dynamically calclulated width                                                                                                                                                                |
+| fixed      | boolean  | false    | false     | when true, `w` overrides dynamically calculated width                                                                                                                                                                 |
 | icon       | string   | false    | null      | url for icon                                                                                                                                                                                                          |
 | onEnter    | function | false    | undefined | if defined, will be invoked when enter is pressed while focused on the `Key` component. When defined, the `$onSoftKey` and `$toggleKeyboard` events will not be emitted from the key (see Events section below)       |
 | size       | string   | false    | sm        | width of the Key                                                                                                                                                                                                      |
