--- a/packages/@lightningjs/ui-components/src/components/Button/Button.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Button/Button.mdx
@@ -80,5 +80,6 @@ If you'd like to have a fixed button with a width smaller than the `minWidth`, y
 | minWidth        | number                        | used as a fallback width if no width is passed into the component and `fixed` is false |
 | paddingX        | number                        | space between the button horizontal edge and the content                               |
 | paddingXNoTitle | number                        | space between the button horizontal edge and the content if no title is provided       |
+| paddingY        | number                        | space between the button vertical edge and the content                                 |
 | textStyle       | string \| object              | text style to apply to the title                                                       |
 | contentSpacing  | number                        | padding between title and prefix                                                       |
