docs(Button): add missing style properties to docs

--- a/packages/@lightningjs/ui-components/src/components/Button/Button.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Button/Button.mdx
@@ -76,6 +76,8 @@ If you'd like to have a fixed button with a width smaller than the `minWidth`, y
 | name            | type                          | description                                                                            |
 | --------------- | ----------------------------- | -------------------------------------------------------------------------------------- |
 | contentColor    | string                        | color to be applied to the prefix and suffix icons                                     |
+| contentSpacing  | number                        | padding to apply between prefix/suffix and title                                       |
+| itemSpacing     | number                        | padding to apply between prefix and suffix content like icons, checkbox, and radio     |
 | justify         | 'center' \| 'left' \| 'right' | alignment of the button's content                                                      |
 | minWidth        | number                        | used as a fallback width if no width is passed into the component and `fixed` is false |
 | paddingX        | number                        | space between the button horizontal edge and the content                               |
