fix(LUI-1041): Implement comments

--- a/packages/@lightningjs/ui-components/src/components/MetadataCardContent/MetadataCardContent.mdx
+++ b/packages/@lightningjs/ui-components/src/components/MetadataCardContent/MetadataCardContent.mdx
@@ -72,6 +72,7 @@ class Basic extends lng.Component {
 | name             | type             | description                                                                              |
 | ---------------- | ---------------- | ---------------------------------------------------------------------------------------- |
 | detailsTextStyle | string \| object | text style for details                                                                   |
+| descriptiobnDetailStyle | object    | style for details                                                                        |
 | providerStyle    | object           | style properties to pass along to the [Provider](?path=/docs/components-provider--basic) |
 
 ### Methods
